@@ -140,12 +140,8 @@
                         <h5 class="h6">Customer Details</h5>
                         <div class="row no-gutters">
                             <div class="col-lg-6 pr-lg-1">
-                                <label id="firstName" class="mb-0 font-9">First Name: </label>
-                                <input for="firstName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="firstName" />
-                            </div>
-                            <div class="col-lg-6 pl-lg-1">
-                                <label id="lastName" class="mb-0 font-9">Last Name: </label>
-                                <input for="lastName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="lastName" />
+                                <label id="recipientName" class="mb-0 font-9">Recipient's Name: </label>
+                                <input for="recipientName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="recipientName" />
                             </div>
                         </div>
                         <label id="contactTel" class="mb-0 font-9">Contact Tel: </label>
@@ -158,16 +154,16 @@
                         <h5 class="h6">Delivery Details</h5>
                         <div class="row no-gutters">
                             <div class="col-lg-6 pr-lg-1">
-                                <label id="firstName" class="mb-0 font-9">First Name: </label>
-                                <input for="firstName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="firstName" />
-                            </div>
-                            <div class="col-lg-6 pl-lg-1">
-                                <label id="lastName" class="mb-0 font-9">Last Name: </label>
-                                <input for="lastName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="lastName" />
+                                <label id="recipientName" class="mb-0 font-9">Recipient's Name: </label>
+                                <input for="recipientName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="recipientName" />
                             </div>
                         </div>
-                        <label id="contactTel" class="mb-0 font-9">Contact Tel: </label>
-                        <input for="contactTel" class="form-control form-control-sm mb-2" maxlength="36" formControlName="phoneNumber" />
+                        <div class="row no-gutters">
+                            <div class="col-lg-6 pr-lg-1">
+                                <label id="contactTel" class="mb-0 font-9">Contact Tel: </label>
+                                <input for="contactTel" class="form-control form-control-sm mb-2" maxlength="36" formControlName="phoneNumber" />
+                            </div>
+                        </div>
                         <div class="mb-2">
                             <div class="mb-2">
                                 <label id="deliveryAddress" class="mb-0 font-9">Delivery Address:</label>
