@@ -1,7 +1,7 @@
 <div class="ws-invoice-card-container row no-gutters justify-content-between h-100" style="flex-direction: column;" (click)="onInvoiceInfoModalClick()">
     <p class="mb-0 ws-invoice-title text-break">
-        <span *ngIf="item?.customer?.firstName">{{item?.customer?.firstName}}<span *ngIf="item?.customer?.lastName"> {{item?.customer?.lastName}}</span></span>
-        <span *ngIf="!item?.customer?.firstName && !item?.customer?.lastName">{{item?.receiptId}}</span>
+        <span *ngIf="item?.customer?.recipientName">{{item?.customer?.recipientName}}</span>
+        <span *ngIf="!item?.customer?.recipientName">{{item?.receiptId}}</span>
     </p>
     <div class="row no-gutters justify-content-between">
         <div class="col">
