@@ -4,10 +4,11 @@
 
 - v1.0.10923                                -
 ---------------------------------------------
-- 2021-05-20                                -
+- 2021-05-22                                -
 ---------------------------------------------
 .: WSM: Task - Retrieve user details to place order + save inserted details (WSW-115)
 .: WSM: Task - Decided whether want to show the selected delivery item (WSM-366)
+.: WSM: Task - Update customer firstname and lastname to recipient name instead (WSM-371)
 
 ---------------------------------------------
 - 2021-05-20                                -
